--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-  <div id="root"></div>12313
+  <div id="root"></div>
   <script src="./tinper_gbimbg/index.js"></script>
   
   <script src="./js/foot.js"></script>
