--- a/static/index.html
+++ b/static/index.html
@@ -2,8 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>MDF 基于元数据的模型驱动开发框架</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>doc</title>
+  <meta name="description" content="MDF 基于元数据的模型驱动开发框架。">
+  <meta name="keywords" content="MDF, 元数据, yonyou, 中台, 中台前端技术收敛化">
+  <meta name="keywords" content="UI">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <meta name="renderer" content="webkit">
+  <link rel="icon" href="//design.yonyoucloud.com/static/tinper-bee/images/favicon.png" type="image/png" sizes="16x16">
   <link href="//design.yonyoucloud.com/static/tinper-bee/2.0.9/assets/tinper-bee.css" rel="stylesheet" media="screen" />
 
   <link rel="stylesheet" href="./tinper_gbimbg/index.css" />
